# python-project

./: CHANGELOG.md  pyproject.toml  release-please-config.json  requirements.txt
.github/: .release-pr-body.hbs
.github/workflows/: ci-entrypoint.yml  release-please.yml
src/: calculator.py  main.py
tests/: test_calculator.py
