[project]
name = "python-project"
version = "1.0.0"
description = "This is a demo python project to showcase reusable workflows and release please methodology"
authors = [
    {name = "Onkar Deshpande",email = "deshpandeopd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
